--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
+astroid==3.0.2
+colorama==0.4.6
 colored==2.2.4
+dill==0.3.7
 et-xmlfile==1.1.0
+isort==5.13.2
+mccabe==0.7.0
 openpyxl==3.1.2
+platformdirs==4.1.0
+pylint==3.0.3
+tomlkit==0.12.3
