--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
 astroid==3.0.2
+beautifulsoup4==4.12.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
 colorama==0.4.6
 colored==2.2.4
 dill==0.3.7
 et-xmlfile==1.1.0
+idna==3.6
 isort==5.13.2
+lxml==5.1.0
 mccabe==0.7.0
 openpyxl==3.1.2
 platformdirs==4.1.0
 pygame==2.5.2
 pylint==3.0.3
+requests==2.31.0
 Send2Trash==1.8.2
+soupsieve==2.5
 tomlkit==0.12.3
+urllib3==2.2.0
