--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,68 @@
+aiohttp==3.9.3
+aiosignal==1.3.1
+appdirs==1.4.4
 astroid==3.0.2
+asyncio==3.4.3
+attrs==23.2.0
 beautifulsoup4==4.12.3
+blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
 colored==2.2.4
+comtypes==1.3.0
 dill==0.3.7
 et-xmlfile==1.1.0
+Flask==3.0.2
+frozendict==2.4.0
+frozenlist==1.4.1
+html5lib==1.1
 idna==3.6
 isort==5.13.2
+itsdangerous==2.1.2
+Jinja2==3.1.3
 lxml==5.1.0
+MarkupSafe==2.1.5
 mccabe==0.7.0
+MouseInfo==0.1.3
+multidict==6.0.5
+multitasking==0.0.11
+numpy==1.26.3
 openpyxl==3.1.2
+pandas==2.2.0
+peewee==3.17.1
+pillow==10.2.0
 platformdirs==4.1.0
+PyAudio==0.2.14
+PyAutoGUI==0.9.54
 pygame==2.5.2
+PyGetWindow==0.0.9
+pyjokes==0.6.0
 pylint==3.0.3
+PyMsgBox==1.0.9
+pyperclip==1.8.2
+pypiwin32==223
+PyRect==0.2.0
+PyScreeze==0.1.30
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+pyttsx3==2.90
+pytweening==1.0.7
+pytz==2024.1
+pywhatkit==5.4
+pywin32==306
 requests==2.31.0
 Send2Trash==1.8.2
+six==1.16.0
 soupsieve==2.5
+SpeechRecognition==3.10.1
 tomlkit==0.12.3
+typing_extensions==4.9.0
+tzdata==2023.4
 urllib3==2.2.0
+webencodings==0.5.1
+Werkzeug==3.0.1
+wikipedia==1.4.0
+yarl==1.9.4
+yfinance==0.2.36
