--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,15 @@ blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+cmake==3.28.1
 colorama==0.4.6
 colored==2.2.4
 comtypes==1.3.0
 dill==0.3.7
+dlib==19.24.2
 et-xmlfile==1.1.0
+face-recognition==1.3.0
+face_recognition_models==0.3.0
 Flask==3.0.2
 frozendict==2.4.0
 frozenlist==1.4.1
@@ -54,6 +58,7 @@ pywhatkit==5.4
 pywin32==306
 requests==2.31.0
 Send2Trash==1.8.2
+setuptools==69.0.3
 six==1.16.0
 soupsieve==2.5
 SpeechRecognition==3.10.1
