--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ MouseInfo==0.1.3
 multidict==6.0.5
 multitasking==0.0.11
 numpy==1.26.3
+opencv-python==4.9.0.80
 openpyxl==3.1.2
 pandas==2.2.0
 peewee==3.17.1
