--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,15 @@ cmake==3.28.1
 colorama==0.4.6
 colored==2.2.4
 comtypes==1.3.0
+contourpy==1.2.0
+cycler==0.12.1
 dill==0.3.7
 dlib==19.24.2
 et-xmlfile==1.1.0
 face-recognition==1.3.0
 face_recognition_models==0.3.0
 Flask==3.0.2
+fonttools==4.48.1
 frozendict==2.4.0
 frozenlist==1.4.1
 html5lib==1.1
@@ -26,8 +29,10 @@ idna==3.6
 isort==5.13.2
 itsdangerous==2.1.2
 Jinja2==3.1.3
+kiwisolver==1.4.5
 lxml==5.1.0
 MarkupSafe==2.1.5
+matplotlib==3.8.2
 mccabe==0.7.0
 MouseInfo==0.1.3
 multidict==6.0.5
@@ -35,6 +40,7 @@ multitasking==0.0.11
 numpy==1.26.3
 opencv-python==4.9.0.80
 openpyxl==3.1.2
+packaging==23.2
 pandas==2.2.0
 peewee==3.17.1
 pillow==10.2.0
@@ -46,6 +52,7 @@ PyGetWindow==0.0.9
 pyjokes==0.6.0
 pylint==3.0.3
 PyMsgBox==1.0.9
+pyparsing==3.1.1
 pyperclip==1.8.2
 pypiwin32==223
 PyRect==0.2.0
