--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.9.3
 aiosignal==1.3.1
 appdirs==1.4.4
+asgiref==3.7.2
 astroid==3.0.2
 asyncio==3.4.3
 attrs==23.2.0
@@ -16,6 +17,7 @@ comtypes==1.3.0
 contourpy==1.2.0
 cycler==0.12.1
 dill==0.3.7
+Django==5.0.2
 dlib==19.24.2
 et-xmlfile==1.1.0
 face-recognition==1.3.0
@@ -29,6 +31,7 @@ idna==3.6
 isort==5.13.2
 itsdangerous==2.1.2
 Jinja2==3.1.3
+joblib==1.3.2
 kiwisolver==1.4.5
 lxml==5.1.0
 MarkupSafe==2.1.5
@@ -65,11 +68,15 @@ pytz==2024.1
 pywhatkit==5.4
 pywin32==306
 requests==2.31.0
+scikit-learn==1.4.0
+scipy==1.12.0
 Send2Trash==1.8.2
 setuptools==69.0.3
 six==1.16.0
 soupsieve==2.5
 SpeechRecognition==3.10.1
+sqlparse==0.4.4
+threadpoolctl==3.3.0
 tomlkit==0.12.3
 typing_extensions==4.9.0
 tzdata==2023.4
